--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
                     <button class="btn btn-primary" type="button" id="button">Search</button>
                   </div>
             </form>
+            <div id="msg">
+                <h3>The food you placed an order on  isn't available. Please order something else if you want....</h3>
+            </div>
+
+            <div id="items">
+
+            </div>
         </div>
     </body>
     <script src="./app.js"></script>
