--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <div id="msg">
                 <h3>The food you placed an order on  isn't available. Please order something else if you want....</h3>
             </div>
-
+            <div id="details">
+            </div>
             <div id="items">
 
             </div>
