--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="items">
             </div>
-            <div id="reviewSection">
+            <div id="reviewSection" style="display: none";>
                 <h4>Reviews</h4>
                 <div id="reviews"></div>
             
