--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             </div>
             <div id="items">
             </div>
-            
+
         </div>
+        <footer style="text-align: center; margin-top: 20px;">
+            <p>© 2024 Your App Name. All rights reserved. Data provided by <a href="https://www.themealdb.com/" target="_blank">TheMealDB</a>.</p>
+        </footer>
     </body>
     <script src="./app.js"></script>
 </html>
