--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
        <title>Recipe App</title> 
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-       <link rel="stylesheet" href="./styles.css">>
+       <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <div class="container">
@@ -21,11 +21,10 @@
             </div>
             <div id="items">
             </div>
-
+            <footer style="text-align: center; margin-top: 20px;">
+                <p>© 2024 Lorna Gathumbi. All rights reserved. Data provided by <a href="https://www.themealdb.com/" target="_blank">TheMealDB</a>.</p>
+            </footer>
         </div>
-        <footer style="text-align: center; margin-top: 20px;">
-            <p>© 2024 Your App Name. All rights reserved. Data provided by <a href="https://www.themealdb.com/" target="_blank">TheMealDB</a>.</p>
-        </footer>
     </body>
     <script src="./app.js"></script>
 </html>
